<resources>
    <string name="app_name">The Lunch Bag</string>
    <string name="default_notification_channel_id">1</string>
    <string name="add_children_its_time_to">Confirm we have the correct school for your student</string>
    <string name="add_debit_credit_card_details">Enter your Debit/Credit Card details</string>
    <string name="card_successfully_message">Your card has been saved successfully</string>
    <string name="you_will_receive_a_link_to_reset_your_password_at_the_provided_email_address">You will receive an OTP to reset your password\nat the provided email address.</string>
    <string name="your_password_has_been_reset_successfully">Your password has been reset\n successfully.</string>
    <string name="add_children_two_can_we_know">Please enter the voucher code from your child’s school flyer</string>
    <string name="add_children_know_allergens">Let us know the allergens!</string>
    <string name="want_to_add_more">Do you want to add another student?</string>
    <string name="view_wallet_textView">. . . . . . . . . . . . . . . . . . . . . . . . . . . . . .</string>
    <string name="woohoo_text">Woohoo\n you are all done!</string>
    <string name="tv_2_text">Lorem ipsum dolor sit amet,\nconsectetur adipisicing elit,sed\n do eiusmod tempor incididunt ut\n labore et dolore magna aliqua.\nLorem ipsum dolor sit amet,\nconsectetur eiusmod tempor\n incididunt.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_wizard_add_card_saved_successfully">Auto top up of €20 goes to your wallet for future orders.</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="your_saved_card">Your Saved Card</string>
    <string name="tv_note_textview_amount">Note: Auto top up will automatically deduct from saved card once your wallet balance is too low to fill your next order</string>
    <string name="balance">Balance</string>
    <string name="money_debited_from_wallet">Money debited\nfrom Wallet</string>
    <string name="transactions_list">Transaction List</string>
    <string name="tell_us_about_your_card">Tell us about\nyour card</string>
    <string name="please_enter_proper_name_as_on_card">Please Enter proper Name as on Card</string>
    <string name="please_select_top_up">Please select topup amount</string>
    <string name="please_select_month">Please select month</string>
    <string name="please_enter_year">please Select Year</string>
    <string name="please_enter_cvv_number">Please Enter CVV number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="euro_string">€</string>
    <string name="please_enter_first_name">Please Enter First Name</string>
    <string name="please_enter_last_name">Please Enter Last Name</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_phone_number">Please Enter Phone Number</string>
    <string name="please_enter_username">Please Enter Username</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_confirm_password">Please Enter Confirm Password</string>
    <string name="please_select_any_button">Please choose any Button</string>
    <string name="password_error_length">Please enter minimum 6 digit</string>
    <string name="password_is_not_match">Password is not match</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_which_has_been_sent_to_your_email">Please Enter The 4 Digit Password To Validate Your Account</string>
    <string name="enter_valid_email_id">Please enter valid Email</string>
    <string name="new_string">Lorem ipsum dolor sit amet,consectetur\n adipisicing elit, sed do eiusmod tempor\n Lorem ipsum dolor sit amet,consectetur\n adipisicing elit.</string>
    <string name="current_wallet_balance">Current Wallet Balance</string>
    <string name="current_wallet">Current Wallet</string>
    <string name="order_again_for_another_day">Order again for</string>
    <string name="another_day">another day</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="tv_service">By using this service you agree to receive emails and texts in relation to the delivery of your child’s lunch</string>
    <string name="tv_email">info@thelunchbag.ie</string>
    <string name="order_complete_dashboard">The cost of the order will be \n deducted at 12 noon the day before \n an order is due</string>
    <string name="tv_menu_content_text">To cancel an order or turn off days, \n Please click here</string>
    <string name="order_set_text">Your order is now set to \n auto generate weekly, \n based on the days \n selected </string>
    <string name="str_or"><u>OR</u></string>
    <string name="update_msg">You are using an old version of this app which is no longer supported. Please upgrade to our latest version.</string>
    <string name="copy_right_reserve">Ⓒ LunchBag 2020. <font fgcolor='#bababa'>All rights reserved</font></string>
    <string name="facebook_app_id">1891721420976163</string>
    <string name="facebook_client_token">56789</string>
    <string name="fb_login_protocol_scheme">fb1222442618087129</string>
    <string name="log_in_details">Log in details</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username_email">Username (Email)</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="or_using">Or using</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="registration">Registration</string>
    <string name="log_in_capital">LOG IN</string>
    <string name="register_capital">REGISTER</string>
    <string name="parent_guardian_first_name">Parent / Guardian First Name</string>
    <string name="step_one">Step One</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_registered">Already Registered?</string>
    <string name="username">Username</string>
    <string name="step_two">Step Two</string>
    <string name="alert_me_when_new_products_or_promotions_are_available">Alert me when new products or promotions are available.</string>
    <string name="yes">Yes</string>
    <string name="YES">yes</string>
    <string name="no">No</string>
    <string name="get_started">Get Started</string>
    <string name="back_to_login">BACK TO LOGIN</string>
    <string name="continue_">Continue</string>
    <string name="county">County</string>
    <string name="find_your_school">Find your school</string>
    <string name="school">School</string>
    <string name="calendar">Calendar</string>
    <string name="call_with_colon">Call:</string>
    <string name="if_you_are_having_any_problems">If you are having any problems,</string>
    <string name="or">or</string>
    <string name="email_with_colon">Email:</string>
    <string name="which_class">Which Class</string>
    <string name="student_first_name">Student First Name</string>
    <string name="student_surname">Student Surname</string>
    <string name="allergies">allergies?</string>
    <string name="skip_to_wallet">Skip To Wallet</string>
    <string name="skip_wizard">Skip Wizard</string>
    <string name="allergen_related_products_will_be_removed_from_your_menu">Allergen related products will be removed from your menu</string>
    <string name="place_order">Place Order</string>
    <string name="add_another_student">Add Another Student</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registered_email_address">Registered Email Address</string>
    <string name="enter_4_digit_passcode">Enter 4 digit passcode</string>
    <string name="resend_one_time_passcode">Resend one time passcode</string>
    <string name="a_one_time_passcode_has_been_emailed_to">A One Time Passcode has been emailed to</string>
    <string name="edit_email">Edit Email</string>
    <string name="enter_a_new_password_to_reset">Enter A New Password To Reset.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="thank_you">Thank you!</string>
    <string name="school_calendar">School Calendar</string>
    <string name="quick_view">Quick View</string>
    <string name="alerts">Alerts</string>
    <string name="contact_us">Contact Us</string>
    <string name="no_wireless_connection">No wireless connection</string>
    <string name="check_to_see_if_you_have_wifi_or_data_enabled_on_your_phone">Check to see if you have wifi or data enabled on your phone</string>
    <string name="please_enter_email_address">Please Enter Email Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="go_to_wallet">Go to wallet</string>
    <string name="please_enter_valid_email_address">Please Enter Valid Email Address</string>
    <string name="password_must_be_at_least_6_characters">Password Must Be At Least 6 Characters</string>
    <string name="password_did_not_match">Password Did Not Match</string>
    <string name="please_select_promotion_alert">Please Select Promotion Alert</string>
    <string name="please_select_yes__no_option">Please Select Yes / No Option</string>
    <string name="call">Call</string>
    <string name="lunch_box_ph_number">(043) 336 2038</string>
    <string name="lunch_box_email">info@thelunchbag.ie</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_otp">Please Enter OTP</string>
    <string name="please_enter_4_digits_otp">Please Enter 4 Digits OTP</string>
    <string name="save">Save</string>
    <string name="update_email">Update Email</string>
    <string name="new_email">New Email</string>
    <string name="please_select_your_class">Please Select Your Class</string>
    <string name="please_enter_student_surname">Please Enter Student Surname</string>
    <string name="please_enter_student_first_name">Please Enter Student First Name</string>
    <string name="do_you_want_to_exit_this_page_">Do you want to exit this page?</string>
    <string name="Are_you_sure_that_you_want_to_delete_this_student_">Are you sure that you want to delete this student?</string>
    <string name="dot">.............................................................................................................................................................................</string>
    <string name="confirm">Confirm</string>
    <string name="warning">Warning</string>
    <string name="new_order_here">New Order Here</string>
    <string name="do_you_want_to_repeat_this_order_">Do you want to repeat this order?</string>
    <string name="orders_must_be_placed_within_this_10_day_window_n_pending_orders_will_change_to_ordered_after_12_30pm">Orders must be placed within this 10 day window.\n \'Pending\' orders will change to \'Ordered\' after Midnight.</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="next">Next</string>
    <string name="i_m_a_student">I\'m a student</string>
    <string name="i_m_a_staff_member">I\'m a staff member</string>
    <string name="enter_unique_passcode">Enter unique passcode</string>
</resources>