<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/custom_pop_up_bg">

    <RelativeLayout
        android:id="@+id/upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/call"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/phNoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center_horizontal"
            android:text="@string/lunch_box_ph_number"
            android:textColor="@color/font_gray"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phNoTv"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="@color/light_black"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_2sdp"
            android:gravity="center_horizontal"
            android:text="@string/lunch_box_email"
            android:textColor="@color/green_background_parent_wallet"
            android:textSize="@dimen/_12ssp" />

    </RelativeLayout>

    <View
        android:id="@+id/margin"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/upper"
        android:background="@color/add_children_editText_stroke_color" />

    <LinearLayout
        android:id="@+id/lower"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/okTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ok"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/popup_yes_no_color"
            android:textSize="@dimen/text_size_dialog_ok_16sp"
            android:textStyle="normal"
            android:typeface="sans" />

        <!--<View
            android:id="@+id/tvEventDetails"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/add_children_editText_stroke_color" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/popup_yes_no_color"
            android:textSize="@dimen/text_size_dialog_ok_16sp"
            android:textStyle="normal"
            android:typeface="sans" />-->
    </LinearLayout>

</RelativeLayout>
